Add Pedidos app

--- a/maquila/usersys/templates/register.html
+++ b/maquila/usersys/templates/register.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head>Registro de Cuenta</head>
+    <head>
+        <title>Registro de Cuenta</title>
+    </head>
     <body>
-        <h1>Registro de Usuario</h1>
-        <p>Nombre</p>
-        <p>Apellido</p>
-        <p>Contraseña</p>
-        <p>Contraseña Repetida</p>
-        <p>Rol</p>
-        <p>Codigo de Registro []. Codigo dado por un administrador para iniciar cuenta nueva</p>
+        <h1>Registro de Cuenta</h1>
+        <form method="post">
+            {% csrf_token %}
+            {{ user_form.as_p }}
+            {{ account_form.as_p }}
+            <button type="submit">Registrarse</button>
+        </form>
     </body>
 </html>
