The User System is Complete

--- a/maquila/pedidos/templates/pedidosadmin.html
+++ b/maquila/pedidos/templates/pedidosadmin.html
@@ -4,7 +4,8 @@
     </head>
     <body>
         <h1>Vista Pedidos para Administracion</h1>
-
+        <a href="{% url 'logout' %}">logout</a> <br>
+        <a href="{% url 'createcode' %}">Crear Codigo para autoriza Cuentas</a> 
 
     </body>
 </html>
