--- a/maquila/pedidos/templates/pedidosclient.html
+++ b/maquila/pedidos/templates/pedidosclient.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         <h1>Aqui el cliente observa el estado de sus pedidos</h1>
+        <a href="{% url 'logout' %}">logout</a> <br>
 
     </body>
 </html>
