--- a/maquila/pedidos/templates/actividadesworker.html
+++ b/maquila/pedidos/templates/actividadesworker.html
@@ -4,6 +4,6 @@
     </head>
     <body>
         <h1>Aqui el trabajador ve sus actividades perndientes</h1>
-
+        <a href="{% url 'logout' %}">logout</a> <br>
     </body>
 </html>
